# dashboard

./: .env  .gitignore  APIBundestag.py  DipApi.ipynb  Pipeline.py  README.md  Scrapink.py  batch_matching.py  bt_actual_speechtime.py  bundestag_actual_speechtime.csv  check_vorgang.py  clean_output.py  cron.py  deploy-gh-pages.sh  descriptors.json  examples.sh  frontend_cron.py  gemini_labeled_topic_info_2025.csv  get_plenarprotokoll.py  index.html  main.py  matching.py  pyproject.toml  run_whisperx.sh  tempCodeRunnerFile.py  test.py  topic_modeling.py  vorgang_to_csv.py
assets/: index-5E-Pd7wi.js  index-CBKu0ExN.css  index-Drky1n9I.js  index-YKy8lci-.css  index-_Wstg4XY.js  index-pz17nonL.js
bundestag/: get_plenarprotokoll.py
bundestag/src/: bt_utils.py  download_cut.py  perc_complete.py
data/: summary.json
data (old and used for matching)/cleaned/: Leichter Anstieg im Umweltetat geplant_clustered.csv
data (old and used for matching)/matched/: Weniger Mittel für die Digitalpolitik_clustered_matched.csv
data(old)/cleaned/: 14,12 Milliarden Euro für das Bildungs- und Familienressort_clustered.csv  16 Milliarden Euro für den Innenetat_clustered.csv  17-10-2025_Anträge zur Situation von Studierenden erörtert_clustered.csv  Justizetat annähernd unverändert im Vergleich zu 2025_clustered.csv  Weniger Mittel für die Digitalpolitik_clustered.csv
data(old)/matched/: 14,12 Milliarden Euro für das Bildungs- und Familienressort_clustered_matched.csv  16 Milliarden Euro für den Innenetat_clustered_matched.csv  (+2 more)
data/topics/: t--1.json  (+229 more)
database/: access_view_supabase.py  check_duplicates.py  db_utils.py  fill_supabase.py  insert.py  timeseries.py  utils.py
example-api-calls/: examples.sh
frontend/: .gitignore  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
matching/: matching.py
orphan/: access_view_supabase.py  backend.py  check_duplicates.py  create_database.py  create_supabase.py  fill_database.py  investigate_database.py  suggestion.sql  test.db  test.py  test.sql  test_database.py  views_supabase.py
topic_modeling/: Bertopic_base.py  gemini_labels.py
topicmodelling/: add_new_topics.py  bert_utils.py  extract_topics.py  gemini_labels.py  run.py  run2.py
youtube/: test_create_playlist.py
(+30 files in other folders)
