[project]
name = "dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ctranslate2>=4.6.0",
    "openpyxl>=3.1.5",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "requests>=2.32.5",
    "python-dotenv>=1.2.1",
    "pytubefix>=10.1.1",
    "whisperx>=3.7.4",
    "psutil>=7.1.2",
    "torch>=2.8.0",
    "scikit-learn>=1.7.2",
    "bertopic>=0.17.3",
    "pandas>=2.2.3",
    "sentence-transformers>=5.1.2",
    "python-crontab>=3.3.0",
    "tiktokapi>=7.2.1",
    "playwright>=1.57.0",
    "isodate>=0.7.2",
    "google-api-python-client==1.7.2",
    "google-auth==1.8.0",
    "google-auth-oauthlib==0.4.1",
    "psycopg2-binary",
    "unidecode>=1.4.0",
    "pathvalidate>=3.3.1",
    "supabase>=2.25.1",
    "python-slugify>=8.0.4",
    "tweepy>=4.16.0",
    "snscrape>=0.7.0.20230622",

    "pydantic>=2.12.5",
    "openai>=2.15.0",

